# PS1_OpenGL

./: CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/GLFW/: CMakeLists.txt
dependencies/glad/: glad.c
dependencies/glad/include/: glad.h
src/: CMakeLists.txt  config.h  glad.c  main.cpp
